--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -92,8 +92,9 @@ ol.num-list li { padding: 10px; border: 1px solid #000000; height: 50px; }
 /* Form */
 /* Table */
 .default-table { margin-top: 15px; margin-bottom: 20px; width: 100%; table-layout: fixed; word-break: break-all; }
-.default-table tr th, .default-table tr td { padding: 10px; border: 1px solid; vertical-align: middle; white-space: wrap; word-break: keep-all; line-height: 1.5; }
+.default-table tr th, .default-table tr td { padding: 10px; border: 1px solid; vertical-align: middle; white-space: wrap; word-break: keep-all; line-height: 1.5; font-size: 14px; }
 .default-table tr th { background: #cccccc; font-weight: 400; }
+.default-table tr td .sub-title { padding: 10px 0; background: aliceblue; }
 
 /* Basic */
 .basic-01 { background: url("../images/sub/guideline/img-guideline-basic-01.png") no-repeat; background-size: contain; height: 200px; border: 1px solid orange; height: 100px; }
@@ -258,7 +259,7 @@ ol.num-list li { padding: 10px; border: 1px solid #000000; height: 50px; }
 @font-face { font-family: 'Nanum_Gothic_Normal'; font-style: normal; font-weight: 400; src: url("../fonts/NanumGothic-Regular.eot"); src: url("../fonts/NanumGothic-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Regular.woff2") format("woff2"), url("../fonts/NanumGothic-Regular.woff") format("woff"), url("../fonts/NanumGothic-Regular.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum_Gothic_Bold'; font-style: normal; font-weight: 700; src: url("../fonts/NanumGothic-Bold.eot"); src: url("../fonts/NanumGothic-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Bold.woff2") format("woff2"), url("../fonts/NanumGothic-Bold.woff") format("woff"), url("../fonts/NanumGothic-Bold.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum_Gothic_ExtraBold'; font-style: normal; font-weight: 800; src: url("../fonts/NanumGothic-ExtraBold.eot"); src: url("../fonts/NanumGothic-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-ExtraBold.woff2") format("woff2"), url("../fonts/NanumGothic-ExtraBold.woff") format("woff"), url("../fonts/NanumGothic-ExtraBold.ttf") format("truetype"); }
-body, table, div, p, ul li { margin-bottom: 10px; font-family: 'Nanum_Gothic_Normal'; font-size: 16px; }
+body, table, div, p, ul li { margin-bottom: 10px; font-family: 'Nanum_Gothic_Normal'; font-size: 14px; }
 
 body { margin-bottom: 0; }
 
@@ -269,22 +270,22 @@ ul li:before { content: "-"; position: absolute; left: -10px; }
 ol li { margin-bottom: 10px; list-style-type: decimal; }
 
 /* H Tag */
-h1 { font-size: 32px; }
+h1 { font-size: 30px; }
 
-h2 { margin-bottom: 15px; padding: 15px 0; border-bottom: 2px solid #000000; font-size: 30px; font-weight: 600; }
+h2 { margin-bottom: 15px; padding: 15px 0; border-bottom: 2px solid #000000; font-size: 28px; font-weight: 600; }
 
-h3 { display: inline-block; margin: 5px 0; padding: 10px 20px; background: #333333; font-size: 18px; color: #ffffff; }
+h3 { display: inline-block; margin: 5px 0; padding: 10px 20px; background: #333333; font-size: 16px; color: #ffffff; }
 
-h4 { position: relative; margin: 20px 0; left: 15px; font-size: 16px; font-weight: 600; }
+h4 { position: relative; margin: 20px 0; left: 15px; font-size: 14px; font-weight: 600; }
 h4:before { content: ""; position: absolute; background: #ffa500; left: -15px; width: 5px; height: 16px; }
 
-h5 { font-size: 24px; }
+h5 { font-size: 12px; }
 
-h6 { font-size: 22px; }
+h6 { font-size: 10px; }
 
 ol { position: relative; left: 30px; list-style: decimal-leading-zero; }
 
-pre, .explanation-box, .explanation-box-pre { margin: 15px 0; padding: 10px 20px; border: 1px solid; width: 100%; min-height: 40px; -webkit-box-sizing: border-box; box-sizing: border-box; }
+pre, .explanation-box, .explanation-box-pre { margin: 15px 0; padding: 0 20px; border: 1px solid; width: 100%; min-height: 40px; -webkit-box-sizing: border-box; box-sizing: border-box; line-height: 40px; }
 
 pre { background-color: #000000; color: #ffffff; font-family: 'NanumGothic', 'serif'; font-size: 15px; line-height: 1.5; }
 
@@ -331,11 +332,15 @@ figure figcaption { text-align: center; }
 .blue { color: #0075C1; }
 
 /* Tab Menu */
-#tabList { display: -webkit-box; display: -ms-flexbox; display: flex; border: 1px solid; width: 100%; }
+#tabList { display: -webkit-box; display: -ms-flexbox; display: flex; margin-bottom: 10px; border: 1px solid; width: 100%; }
 #tabList article { width: 25%; height: 40px; text-align: center; line-height: 40px; }
 #tabList article.current { background: #0075C1; color: #ffffff; }
 
 .tab-content { display: none; }
 .tab-content.current { display: block; }
+
+.colorscripter-code { font-size: 12px; }
+
+.colorscripter-code-table { background: #000000 !important; width: 100%; }
 
 /*# sourceMappingURL=style.css.map */
