--- a/guideLine/html/layout/header.html
+++ b/guideLine/html/layout/header.html
@@ -1,16 +1,13 @@
 <section>
     <h1><a href="../main/index.html">What to do!?</a></h1>
     <nav id="menuList">
-        <div><a href="../sub/guideline.html">GuideLine</a></div>
+        <!-- <div><a href="../sub/guideline.html">GuideLine</a></div> -->
         <div><a href="../sub/htmcss.html">HTML5</a></div>
         <div><a href="../sub/sass.html">SASS</a></div>
         <div><a href="../sub/github.html">Git</a></div>
         <div><a href="../sub/jquery.html">JQuery</a></div>
         <div><a href="../sub/Vue.html">Vue</a></div>
         <div class="red">Svelte(보류)</div>
-        <!-- 
-        <div><a href="../sub/jquery.html">JQuery</a></div>
-        <div><a href="../sub/svelte.html">Svelte</a></div> 
-        -->
+        <!-- <div><a href="../sub/svelte.html">Svelte</a></div> -->
     </nav>
 </section>
