--- a/guideLine/assets/css/style.css
+++ b/guideLine/assets/css/style.css
@@ -259,7 +259,7 @@ ol.num-list li { padding: 10px; border: 1px solid #000000; height: 50px; }
 @font-face { font-family: 'Nanum_Gothic_Normal'; font-style: normal; font-weight: 400; src: url("../fonts/NanumGothic-Regular.eot"); src: url("../fonts/NanumGothic-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Regular.woff2") format("woff2"), url("../fonts/NanumGothic-Regular.woff") format("woff"), url("../fonts/NanumGothic-Regular.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum_Gothic_Bold'; font-style: normal; font-weight: 700; src: url("../fonts/NanumGothic-Bold.eot"); src: url("../fonts/NanumGothic-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-Bold.woff2") format("woff2"), url("../fonts/NanumGothic-Bold.woff") format("woff"), url("../fonts/NanumGothic-Bold.ttf") format("truetype"); }
 @font-face { font-family: 'Nanum_Gothic_ExtraBold'; font-style: normal; font-weight: 800; src: url("../fonts/NanumGothic-ExtraBold.eot"); src: url("../fonts/NanumGothic-ExtraBold.eot?#iefix") format("embedded-opentype"), url("../fonts/NanumGothic-ExtraBold.woff2") format("woff2"), url("../fonts/NanumGothic-ExtraBold.woff") format("woff"), url("../fonts/NanumGothic-ExtraBold.ttf") format("truetype"); }
-body, table, div, p, ul li { margin-bottom: 10px; font-family: 'Nanum_Gothic_Normal'; font-size: 14px; }
+body, table, div, p, ul li { margin: 10px 0; font-family: 'Nanum_Gothic_Normal'; font-size: 14px; }
 
 body { margin-bottom: 0; }
 
@@ -279,7 +279,7 @@ h3 { display: inline-block; margin: 5px 0; padding: 10px 20px; background: #3333
 h4 { position: relative; margin: 20px 0; left: 15px; font-size: 14px; font-weight: 600; }
 h4:before { content: ""; position: absolute; background: #ffa500; left: -15px; width: 5px; height: 16px; }
 
-h5 { font-size: 12px; }
+h5 { margin: 15px 0; font-size: 12px; font-weight: 600; }
 
 h6 { font-size: 10px; }
 
