--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -44,7 +44,7 @@ table,
 div,
 p,
 ul li {
-    margin-bottom: 10px;
+    margin: 10px 0;
 
     font : {
         family: 'Nanum_Gothic_Normal';
@@ -125,7 +125,12 @@ h4 {
 }
 
 h5 {
-    font-size: 12px;
+    margin: 15px 0;
+    
+    font : {
+        size: 12px;
+        weight: 600;
+    }
 }
 
 h6 {
